gitops/applications/infrastructure/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elasticsearch.forbzyltd.com
      secretName: elasticsearch-tls
  rules:
    - host: elasticsearch.forbzyltd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200
